<resources>
  <string name="app_name">Asclepius</string>
  <string name="gallery">Galeri</string>
  <string name="analyze">Analyze</string>
  <string name="result">Hasil Analisis</string>
  <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
  <string name="tflitevision_is_not_initialized_yet">TF Lite Vision is not initialized yet. Please wait for the model to load</string>
  <string name="photo">Photo</string>
  <string name="content_image">Content Image</string>
  <string name="inference_time">Inference Time</string>
  <string name="date">Date</string>
  <string name="save_result">Save Result</string>
  <string name="tidak_ada_riwayat_prediksi_yang_anda_simpan">Tidak ada riwayat prediksi yang anda simpan.</string>
  <string name="image_preview">Image Preview</string>
  <string name="tidak_ada_berita_yang_tersedia">Tidak ada berita yang tersedia.</string>
  <string name="delete">Delete</string>
  <string name="title">Title</string>
  <string name="summary">Summary</string>
  <string name="home">Home</string>
  <string name="news">News</string>
  <string name="history">History</string>
</resources>