<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.activity.ResultActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/result_image"
      android:layout_width="match_parent"
      android:layout_height="400dp"

      android:contentDescription="@string/content_image"
      android:scaleType="fitCenter"
      app:srcCompat="@drawable/ic_place_holder" />

    <TextView
      android:id="@+id/result_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/result"
      android:textSize="16sp" />

    <TextView
      android:id="@+id/inferenceTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/inference_time"
      android:textSize="16sp" />

    <TextView
      android:id="@+id/dateTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/date"
      android:textSize="16sp" />

    <Button
      android:id="@+id/saveButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="16dp"
      android:text="@string/save_result" />
  </LinearLayout>
</ScrollView>